--- a/chatapp-frontend/package.json
+++ b/chatapp-frontend/package.json
@@ -15,6 +15,7 @@
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^7.2.0",
     "socket.io": "^4.8.1",
